# gitmarch

./: .gitignore  CLAUDE.md  setup.sh
.github/workflows/: api-server.yml  web-ui.yml
api-server/: Cargo.toml  ContainerFile  gitmarch.db  recipe.json  ssh_host_key
api-server/migrations/: 0001_create_users.sql
api-server/src/: db.rs  feature.rs  main.rs
api-server/src/feature/: git.rs  repo.rs  user.rs
api-server/src/feature/git/: branch.rs  checkout.rs  merge.rs  pull.rs  push.rs  switch.rs
api-server/src/presentation/: http.rs  ssh.rs
web-ui/: components.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vitest.config.mts
web-ui/src/app/: layout.tsx  page.tsx
web-ui/src/feature/git/: response.ts
web-ui/src/feature/git/branch/: branch.test.ts  branch.ts  components.browser.test.tsx  components.stories.tsx  components.tsx
web-ui/src/feature/git/switch/: switch.test.ts  switch.ts
web-ui/src/infrastructure/: client.test.ts  client.ts
web-ui/src/presentation/pages/: DashboardPage.tsx
web-ui/src/shared/components/: AppSidebar.browser.test.tsx  AppSidebar.stories.tsx  AppSidebar.tsx
web-ui/src/shared/components/ui/: select.tsx
web-ui/src/shared/lib/: utils.test.ts
web-ui/src/shared/styles/: globals.css
