[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8.6"
data-encoding = "2"
russh = "0.44"
russh-keys = "0.44"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
url = "2.5.7"

[dev-dependencies]
serde_json = "1.0"
tower = "0.5"
